js/js.translator/testData/incremental/invalidationWithPL/removeFunctionFromBlockWithCrossModuleInliner/lib1/l1b.3.kt
inline fun baz() = 11
